[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/lyrics/lyrics.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/presets/default/scroll_container/minimal_scroll.tres" type="Theme" id=2]
[ext_resource path="res://scenes/lyrics/chords_edit.gd" type="Script" id=3]
[ext_resource path="res://assets/themes/presets/default/default.tres" type="Theme" id=4]
[ext_resource path="res://scenes/lyrics/lyrics_edit.gd" type="Script" id=5]
[ext_resource path="res://assets/themes/presets/default/bold_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://scenes/lyrics/inputs.gd" type="Script" id=7]
[ext_resource path="res://scenes/lyrics/view.gd" type="Script" id=8]
[ext_resource path="res://assets/fonts/GoogleSans/GoogleSans-Medium.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/fonts/NotoSansJP/NotoSansJP-Medium.otf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/fonts/NotoSansKR/NotoSansKR-Medium.otf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/fonts/NotoSans/NotoSans-Medium.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/fonts/NotoSansSC/NotoSansSC-Medium.otf" type="DynamicFontData" id=13]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 1, 1, 1, 0.0470588 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 9 )
fallback/0 = ExtResource( 12 )
fallback/1 = ExtResource( 10 )
fallback/2 = ExtResource( 11 )
fallback/3 = ExtResource( 13 )

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[node name="Lyrics" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 1009.0
margin_bottom = 585.0

[node name="Widgets" type="HBoxContainer" parent="VBox"]
margin_right = 994.0
margin_bottom = 45.0
theme = ExtResource( 4 )

[node name="View" type="HBoxContainer" parent="VBox/Widgets"]
margin_right = 451.0
margin_bottom = 45.0
script = ExtResource( 8 )

[node name="Label" type="Label" parent="VBox/Widgets/View"]
margin_top = 12.0
margin_right = 47.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 6 )
text = "View: "

[node name="OptionButton" type="OptionButton" parent="VBox/Widgets/View"]
margin_left = 51.0
margin_right = 451.0
margin_bottom = 45.0
rect_min_size = Vector2( 400, 0 )
text = "Lyrics"
items = [ "Lyrics", null, false, 0, null, "Add chords...", null, false, 1, null ]
selected = 0

[node name="Inputs" type="HBoxContainer" parent="VBox/Widgets"]
visible = false
margin_left = 455.0
margin_right = 732.0
margin_bottom = 45.0
custom_constants/separation = 40
script = ExtResource( 7 )

[node name="Instrument" type="HBoxContainer" parent="VBox/Widgets/Inputs"]
margin_right = 143.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="VBox/Widgets/Inputs/Instrument"]
margin_top = 12.0
margin_right = 81.0
margin_bottom = 33.0
text = "Instrument"

[node name="LineEdit" type="LineEdit" parent="VBox/Widgets/Inputs/Instrument"]
margin_left = 85.0
margin_right = 143.0
margin_bottom = 45.0
rect_min_size = Vector2( 150, 0 )

[node name="Title" type="HBoxContainer" parent="VBox/Widgets/Inputs"]
margin_left = 183.0
margin_right = 277.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="VBox/Widgets/Inputs/Title"]
margin_top = 12.0
margin_right = 32.0
margin_bottom = 33.0
text = "Title"

[node name="LineEdit" type="LineEdit" parent="VBox/Widgets/Inputs/Title"]
margin_left = 36.0
margin_right = 94.0
margin_bottom = 45.0
rect_min_size = Vector2( 150, 0 )

[node name="Padding" type="Control" parent="VBox/Widgets"]
margin_left = 455.0
margin_right = 883.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="Edit" type="Button" parent="VBox/Widgets"]
margin_left = 887.0
margin_right = 994.0
margin_bottom = 45.0
rect_min_size = Vector2( 45, 45 )
size_flags_horizontal = 0
theme_type_variation = "AddPlaylistButton"
text = "Edit"
icon_align = 1
expand_icon = true

[node name="Delete" type="Button" parent="VBox/Widgets"]
visible = false
margin_left = 860.0
margin_right = 994.0
margin_bottom = 45.0
rect_min_size = Vector2( 45, 45 )
size_flags_horizontal = 0
theme_type_variation = "AddPlaylistButton"
text = "Delete"
icon_align = 1
expand_icon = true

[node name="Save" type="Button" parent="VBox/Widgets"]
visible = false
margin_left = 879.0
margin_right = 994.0
margin_bottom = 45.0
rect_min_size = Vector2( 45, 45 )
size_flags_horizontal = 0
theme_type_variation = "AddPlaylistButton"
text = "Save"
icon_align = 1
expand_icon = true

[node name="Cancel" type="Button" parent="VBox/Widgets"]
visible = false
margin_left = 858.0
margin_right = 994.0
margin_bottom = 45.0
theme_type_variation = "AddPlaylistButton"
text = "Cancel"

[node name="Texts" type="PanelContainer" parent="VBox"]
margin_top = 49.0
margin_right = 994.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Lyrics" type="TextEdit" parent="VBox/Texts"]
margin_left = 15.0
margin_top = 15.0
margin_right = 979.0
margin_bottom = 506.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.945098, 0.901961, 1, 1 )
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/read_only = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_styles/completion = SubResource( 14 )
readonly = true
smooth_scrolling = true
wrap_enabled = true
script = ExtResource( 5 )
space_margin = 4
font_size_m = 24
font_size_s = 16

[node name="Chords" type="TextEdit" parent="VBox/Texts"]
visible = false
margin_left = 15.0
margin_top = 15.0
margin_right = 979.0
margin_bottom = 506.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.945098, 0.901961, 1, 1 )
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/read_only = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_styles/completion = SubResource( 14 )
readonly = true
smooth_scrolling = true
wrap_enabled = true
script = ExtResource( 3 )
space_margin = 4
font_size_m = 24
font_size_s = 16

[connection signal="pressed_add" from="VBox/Widgets/View" to="." method="_on_View_pressed_add"]
[connection signal="pressed_chord" from="VBox/Widgets/View" to="." method="_on_View_pressed_chord"]
[connection signal="pressed_lyrics" from="VBox/Widgets/View" to="." method="_on_View_pressed_lyrics"]
[connection signal="item_selected" from="VBox/Widgets/View/OptionButton" to="VBox/Widgets/View" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="VBox/Widgets/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="VBox/Widgets/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="VBox/Widgets/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBox/Widgets/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="cursor_changed" from="VBox/Texts/Chords" to="VBox/Texts/Chords" method="_on_Chords_cursor_changed"]
[connection signal="text_changed" from="VBox/Texts/Chords" to="VBox/Texts/Chords" method="_on_Chords_text_changed"]
